Fix headings spacings

--- a/src/main/resources/scss/custom/_content.scss
+++ b/src/main/resources/scss/custom/_content.scss
@@ -26,7 +26,9 @@ $list-puce-size: 22px;
   .h2,
   h1,
   .h1 {
-    margin-top: spacing(5);
+    &:not(:first-child) {
+      margin-top: spacing(4);
+    }
   }
 
   // -------
@@ -44,9 +46,11 @@ $list-puce-size: 22px;
 
   ol {
     counter-reset: b;
-    list-style: none;
+    list-style: none !important;
 
     > li {
+      list-style-type: none;
+
       &::before {
         display: inline-block;
         background-color: $primary;
